--- a/01-gallery.html
+++ b/01-gallery.html
@@ -13,6 +13,13 @@
 
     <!-- Add gallery items to this list -->
     <div class="gallery"></div>
+    <div class="gallery"></div>
+    <div class="gallery"></div>
+    <div class="gallery"></div>
+    <div class="gallery"></div>
+    <div class="gallery"></div>
+    <div class="gallery"></div>
+    <div class="gallery"></div>
     <script src="js/01-gallery.js" type="module"></script>
   </body>
 </html>
