--- a/01-gallery.html
+++ b/01-gallery.html
@@ -20,6 +20,7 @@
     <div class="gallery"></div>
     <div class="gallery"></div>
     <div class="gallery"></div>
+    <div class="gallery"></div>
     <script src="js/01-gallery.js" type="module"></script>
   </body>
 </html>
